# Trading-App

./: .gitignore  CMakeLists.txt  README.md  market_data.csv
apps/: main.cpp
include/: CSVReader.hpp  MarketDataService.hpp  MarketSimulator.hpp  OrderBook.hpp  RiskManager.hpp  SpreadStrategy.hpp  Strategy.hpp  ThreadSafeQueue.hpp  Types.hpp
src/: MarketDataService.cpp  MarketSimulator.cpp  OrderBook.cpp  RiskManager.cpp  SpreadStrategy.cpp
tests/: OrderBookTests.cpp  test_main.cpp
